feat: update getLast